@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity party_relationship {}
entity party_role {}
entity party_relationship_type {}
entity communication_event {}
entity priority_type {}
entity party_relationship_status_type {}

party_relationship "from"  ||..|{ party_role
party_relationship "to"  ||..|{ party_role
party_relationship }|..|| party_relationship_type
party_relationship }|..|| communication_event
party_relationship }|..|| priority_type
party_relationship }|..|| party_relationship_status_type

@enduml
